[metadata]
name = stackhpc-ipa-hardware-managers
author = StackHPC
author-email = doug@stackhpc.com
summary = StackHPC hardware managers
home-page = https://github.com/stackhpc/stackhpc-ipa-hardware-managers
license = Apache-2
version = 0.0.1
classifier =
    Development Status :: 4 - Beta
        Intended Audience :: Developers
        Operating System :: OS Independent
        License :: OSI Approved :: Apache Software License
        Programming Language :: Python

[files]
packages =
    stackhpc_ipa_hardware_managers

[entry_points]
ironic_python_agent.hardware_managers =
    system_bios = stackhpc_ipa_hardware_managers.system_bios:SystemBiosHardwareManager
